# cgp

./: Cargo.toml
crates/cgp/: Cargo.toml
crates/cgp-async/: Cargo.toml
crates/cgp-async-macro/: Cargo.toml
crates/cgp-async-macro/src/: lib.rs
crates/cgp-component-macro/: Cargo.toml
crates/cgp-component-macro-lib/src/: lib.rs
crates/cgp-component-macro-lib/src/delegate_components/: ast.rs  define.rs  delegates_to.rs  generic_type_params.rs  macro_gen.rs  merge_generics.rs  mod.rs  substitution_macro.rs
crates/cgp-component-macro/src/: lib.rs
crates/cgp-component-macro/src/delegate_components/: ast.rs  define.rs  define_struct.rs  delegate.rs  impl_delegate.rs  macro_gen.rs  mod.rs  redelegate.rs
crates/cgp-component-macro/src/derive_component/: replace_self_receiver.rs
crates/cgp-component-macro/src/helper/: consumer_impl.rs  equal.rs  mod.rs  provider_impl.rs
crates/cgp-component-macro/src/tests/: basic.rs  const_generic.rs  delegate_components.rs  mod.rs
crates/cgp-component/src/: lib.rs
crates/cgp-component/src/macros/: delegate_component.rs  mod.rs  (+3 more)
crates/cgp-core/src/: lib.rs  prelude.rs
crates/cgp-error-eyre/src/: lib.rs
crates/cgp-error-std/src/: lib.rs
crates/cgp-error/src/: can_raise_error.rs  has_error_type.rs  lib.rs
crates/cgp-extra/: Cargo.toml
crates/cgp-extra/src/: lib.rs
crates/cgp-field/: Cargo.toml
crates/cgp-field-macro-lib/src/: field.rs  lib.rs
crates/cgp-field-macro/src/: lib.rs
crates/cgp-field/src/: lib.rs  traits.rs
crates/cgp-run/src/: lib.rs
crates/cgp-sync/: Cargo.toml
crates/cgp/src/: lib.rs
(+16 files in other folders)
